@@ -1,3 +1,8 @@
+Fri Jun 21 14:15:08 2013  Koichi Sasada  <ko1@atdot.net>
+
+	* gc.c: fix to use total_allocated_object_num and heaps_used
+	  at the GC time for profiler.
+
 Fri Jun 21 12:35:35 2013  Koichi Sasada  <ko1@atdot.net>
 
 	* gc.c: RGENGC_CHECK_MODE should be 0.
